# centrum

./: Cargo.toml  rust-toolchain.toml
.github/workflows/: frontier-tests.yml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  client.rs  command.rs  main.rs  rpc.rs  service.rs
node/src/rpc/: mod.rs
pallets/accounts/: Cargo.toml
pallets/accounts/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: lib.rs  webauthn.rs
runtime/: Cargo.toml
runtime/src/: accounts.rs  apis.rs  configs.rs  lib.rs
