[workspace.package]
license = "GPL-3.0"
authors = ["Abstracted Labs <https://github.com/Abstracted-Labs/>"]
homepage = "https://github.com/Abstracted-Labs/"
repository = "https://github.com/Abstracted-Labs/centrum"
edition = "2021"

[workspace]
members = [
    "node",
    "runtime",
    "primitives",
    "pallets/*"
]
exclude = ["testing"]
resolver = "2"

[workspace.dependencies]
centrum-runtime = { path = "./runtime", default-features = false }
centrum-primitives = { path = "./primitives", default-features = false }

pallet-accounts = { path = "./pallets/accounts", default-features = false }

centrum-mpc-node = { git = "https://github.com/Abstracted-Labs/centrum-mpc" }
pallet-mpc-manager = { git = "https://github.com/Abstracted-Labs/centrum-mpc", default-features = false }
pallet-mpc-manager-runtime-api = { git = "https://github.com/Abstracted-Labs/centrum-mpc", default-features = false }

clap = { version = "4.5.3" }
getrandom = { version = "*", features = ["js"], default-features = false }
futures = { version = "0.3.30" }
jsonrpsee = { version = "0.23.2" }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
scale-info = { version = "2.11.1", default-features = false }
serde = { version = "1.0.145", default-features = false }
serde_bytes = { version = "0.11.15", default-features = false }
serde_cbor = { version = "0.11.2", default-features = false }
serde_with = { version = "3.11.0", default-features = false, features = ["macros"] }
serde_json = { version = "1.0.114", default-features = false }
base64 = { version = "0.13.1" }

p256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "alloc"] }
array-bytes = { version = "6.2.3" }

frame-benchmarking-cli = { version = "42.0.0", default-features = false }
frame-system = { version = "37.1.0", default-features = false }
pallet-transaction-payment = { version = "37.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "40.0.0", default-features = false }
sc-basic-authorship = { version = "0.44.0", default-features = false }
sc-cli = { version = "0.46.0", default-features = false }
sc-client-api = { version = "37.0.0", default-features = false }
sc-consensus = { version = "0.43.0", default-features = false }
sc-consensus-aura = { version = "0.44.0", default-features = false }
sc-consensus-grandpa = { version = "0.29.0", default-features = false }
sc-executor = { version = "0.40.0", default-features = false }
sc-network = { version = "0.44.0", default-features = false }
sc-offchain = { version = "39.0.0", default-features = false }
sc-rpc-api = { version = "0.43.0", default-features = false }
sc-service = { version = "0.45.0", default-features = false }
sc-telemetry = { version = "24.0.0", default-features = false }
sc-transaction-pool = { version = "37.0.0", default-features = false }
sc-transaction-pool-api = { version = "37.0.0", default-features = false }
sp-api = { version = "34.0.0", default-features = false }
sp-block-builder = { version = "34.0.0", default-features = false }
sp-blockchain = { version = "37.0.0", default-features = false }
sp-consensus-aura = { version = "0.40.0", default-features = false }
sp-consensus-grandpa = { version = "21.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-inherents = { version = "34.0.0", default-features = false }
sp-keyring = { version = "39.0.0", default-features = false }
sp-runtime = { version = "39.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-timestamp = { version = "34.0.0", default-features = false }
substrate-frame-rpc-system = { version = "38.0.0", default-features = false }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
frame-benchmarking = { version = "37.0.0", default-features = false }
frame-executive = { version = "37.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.5.0", default-features = false }
frame-support = { version = "37.0.0", default-features = false }
frame-system-benchmarking = { version = "37.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "34.0.0", default-features = false }
frame-try-runtime = { version = "0.43.0", default-features = false }
pallet-aura = { version = "36.0.0", default-features = false }
pallet-balances = { version = "38.0.0", default-features = false }
pallet-grandpa = { version = "37.0.0", default-features = false }
pallet-sudo = { version = "37.0.0", default-features = false }
pallet-timestamp = { version = "36.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "37.0.0", default-features = false }
sp-genesis-builder = { version = "0.15.0", default-features = false }
sp-offchain = { version = "34.0.0", default-features = false }
sp-session = { version = "35.0.0", default-features = false }
sp-storage = { version = "21.0.0", default-features = false }
sp-transaction-pool = { version = "34.0.0", default-features = false }
sp-version = { version = "37.0.0", default-features = false }
substrate-wasm-builder = { version = "24.0.0", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
