[package]
name = "centrum-primitives"
description = ""
version = "0.0.1"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde = { workspace = true, features = ["alloc", "derive"] }
serde_bytes = { workspace = true, features = ["alloc"] }
serde_cbor = { workspace = true, features = ["alloc"] }
serde_with = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true, features = ["alloc"] }
codec = { package = "parity-scale-codec", workspace = true, features = ["max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }

sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-support = { workspace = true }

p256 = { workspace = true }
array-bytes = { workspace = true }

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_json/std",
    "serde_bytes/std",
    "serde_cbor/std",
    "serde_with/std",
    "base64/std",
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-io/std",
    "sp-std/std",
    "frame-support/std"
]
